# my_chat_bot

./: .env.example  .gitignore  AGENTS.md  Caddyfile  MEMORY.md  README.md  pyproject.toml
launchd/: com.den.my-chat-bot-web.plist.template  com.den.my-chat-bot.plist.template
my_chat_bot/: __init__.py  __main__.py  attachments.py  bot.py  config.py  context_store.py  http_utils.py  memory.py  openai_client.py  prompt_builder.py  telegram_client.py  web_main.py  web_server.py
scripts/: install_launch_agent.sh  install_web_launch_agent.sh  run_bot_launchd.sh  run_caddy_https.sh  run_web_launchd.sh  start_stack.sh  stop_stack.sh  uninstall_launch_agent.sh  uninstall_web_launch_agent.sh
tests/: test_attachments.py  test_bot.py  test_config.py  test_context_store.py  test_memory.py  test_openai_client.py  test_web.py
web/: app.js  index.html
