[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "my-chat-bot"
version = "0.1.0"
description = "Simple Telegram bot with OpenAI integration and bounded context memory"
requires-python = ">=3.9"
readme = "README.md"
dependencies = []

[project.scripts]
my-chat-bot = "my_chat_bot.__main__:main"
